modified portfolio div content

--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
     </div>
     <div id="aboutExperience" class="section scrollspy">
         <div class="row">
-            <div class="col s3">
+            <div class="col s3" id="expBox">
                 <h3 id="portf">Portfolio</h3>
-                <img class="photo" src="assets/images/success3.png">
+                <img id="expGirl" src="assets/images/success3.png">
             </div>
             <div class="col offset-s1 s3">
                 <div class="card">
@@ -137,7 +137,7 @@
                         <p>
                             Languages/Tools: Node.js, Express, JavaScript, jQuery, MySQL, Sequelize, Handlebars, Passport, Socket.io
                         </p>
-                            Deployed app: <a href="https://speak-it.herokuapp.com/">here</a>
+                            Deployed app: <a href="https://speak-it.herokuapp.com/" target="_blank">here</a>
                         <p>
                             <span class="right">
                                 <a class="btn-floating btn-large waves-effect waves-light cyan darken-4">
@@ -176,8 +176,71 @@
                     </div>
                 </div>
             </div>
+            <div class="col s3">
+                <div class="card">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img class="z-depth-1 activator" src="assets/images/portf3.jpg">
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title activator">Disney Trivia<i class="material-icons right">more_vert</i></span>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">Disney Trivia<i class="material-icons right">close</i></span>
+                        <p>Mar 2018</p>
+                        <p>Front End Developer</p>
+                        <p>
+                            Disney related trivia game that shows only one question until the player answers it or their time runs out. If the player selects the correct answer, a congratulation screen will be shown. After a few seconds, the next question is displayed - without any user input.
+                        </p>
+                        <p>
+                            Languages/Tools: HTML5, CSS, JavaScript, Bootstrap, GoogleFonts
+                        </p>
+                            Deployed app: <a href="https://anyakilpatrick.github.io/TriviaGame/" target="_blank">here</a>
+                        <p>
+                            <span class="right">
+                                <a class="btn-floating btn-large waves-effect waves-light cyan darken-4">
+                                    <i class="fab fa-github fa-7x"></i>
+                                </a>
+                            </span>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col offset-s1 s3">
+                <div class="card">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img class="z-depth-1 activator" src="assets/images/portf1.jpg">
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title activator">Hangman<i class="material-icons right">more_vert</i></span>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">Hangman<i class="material-icons right">close</i></span>
+                        <p>Feb 2018</p>
+                        <p>Front End Developer</p>
+                        <p>
+                            Application features dynamically updated HTML and CSS powered by JavaScript code. Game’s theme: “The Hobbit”. Interactive features: provided thematic image and sound for each guessed word.
+                        </p>
+                        <p>
+                            Languages/Tools: HTML5, CSS, JavaScript, Bootstrap, GoogleFonts
+                        </p>
+                            Deployed app: <a href="https://anyakilpatrick.github.io/Hangman-Game" target="_blank">here</a>
+                        <p>
+                            <span class="right">
+                                <a class="btn-floating btn-large waves-effect waves-light cyan darken-4">
+                                    <i class="fab fa-github fa-7x"></i>
+                                </a>
+                            </span>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col offset-s1 s3" id="expBox">
+                <img id="expGirl" src="assets/images/comp.png">
+                <h5 class="right">to be continued..</h5>
+            </div>
         </div>
     </div>
+
     <div class="parallax-container z-depth-5">
         <div class="parallax">
             <img src="assets/images/parallax1.jpg">
