modified contact div

--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
                             Languages/Tools: Node.js, Express, JavaScript, jQuery, MySQL, Sequelize, Handlebars, Passport, Socket.io
                         </p>
                             Deployed app: <a href="https://speak-it.herokuapp.com/" target="_blank">here</a>
-                        <p>
-                            <span class="right">
-                                <a class="btn-floating btn-large waves-effect waves-light cyan darken-4">
+                        <p>Github
+                            <span>
+                                <a class="btn-floating btn-large waves-effect waves-light cyan darken-4" href="https://github.com/AnyaKilpatrick/SpeakIT" target="_blank">
                                     <i class="fab fa-github fa-7x"></i>
                                 </a>
                             </span>
@@ -167,8 +167,11 @@
                             Languages/Tools: Node.js, npm packages (inquire, mysql, cli-table), MySQL database
                         </p>
                         <p>
-                            <span class="right">
-                                <a class="btn-floating btn-large waves-effect waves-light cyan darken-4">
+                            <a href="https://www.youtube.com/watch?v=VdBbARgVYRw" target="_blank">Demo Video</a>
+                        </p>
+                        <p> Github
+                            <span>
+                                <a class="btn-floating btn-large waves-effect waves-light cyan darken-4" href="https://github.com/AnyaKilpatrick/Bamazon" target="_blank">
                                     <i class="fab fa-github fa-7x"></i>
                                 </a>
                             </span>
@@ -195,9 +198,8 @@
                             Languages/Tools: HTML5, CSS, JavaScript, Bootstrap, GoogleFonts
                         </p>
                             Deployed app: <a href="https://anyakilpatrick.github.io/TriviaGame/" target="_blank">here</a>
-                        <p>
-                            <span class="right">
-                                <a class="btn-floating btn-large waves-effect waves-light cyan darken-4">
+                        <p> Github <span>
+                                <a class="btn-floating btn-large waves-effect waves-light cyan darken-4" href="https://github.com/AnyaKilpatrick/TriviaGame" target="_blank">
                                     <i class="fab fa-github fa-7x"></i>
                                 </a>
                             </span>
@@ -224,9 +226,9 @@
                             Languages/Tools: HTML5, CSS, JavaScript, Bootstrap, GoogleFonts
                         </p>
                             Deployed app: <a href="https://anyakilpatrick.github.io/Hangman-Game" target="_blank">here</a>
-                        <p>
-                            <span class="right">
-                                <a class="btn-floating btn-large waves-effect waves-light cyan darken-4">
+                        <p> Github
+                            <span>
+                                <a class="btn-floating btn-large waves-effect waves-light cyan darken-4" href="https://github.com/AnyaKilpatrick/Hangman-Game" target="_blank">
                                     <i class="fab fa-github fa-7x"></i>
                                 </a>
                             </span>
@@ -236,51 +238,77 @@
             </div>
             <div class="col offset-s1 s3" id="expBox">
                 <img id="expGirl" src="assets/images/comp.png">
-                <h5 class="right">to be continued..</h5>
             </div>
         </div>
     </div>
 
-    <div class="parallax-container z-depth-5">
+    <div class="parallax-container">
         <div class="parallax">
             <img src="assets/images/parallax1.jpg">
         </div>
     </div>
-    <div class="grey lighten-1">
+    <div id="aboutContacts" class="section scrollspy">
+        <div class="row center">
+            <h3 class="col s12" id="connect">Connect With Me</h3>
+        </div>
         <div class="row">
-            djdjdj djjee  ejej
+            <div class="col offset-s2 s2">
+                <div class="row">
+                    <div class="col s12">
+                        <img id="emailImg" class="responsive-img" src="assets/images/email.png" alt="email">
+                    </div>
+                    <div class="col s12">
+                        <p class="connectP">
+                            hannakilpatrick@gmail.com
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col s2">
+                <div class="row">
+                    <div class="col s12">
+                        <img id="phoneImg" class="responsive-img" src="assets/images/phone.png" alt="phone">
+                    </div>
+                    <div class="col s12">
+                        <p class="connectP center">
+                            (804) 972-1265
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col s2">
+                <div class="row">
+                    <div class="col s12">
+                        <img class="responsive-img" src="assets/images/github4.png" alt="github">
+                    </div>
+                    <div class="col s12">
+                        <p class="center">
+                            <a class="connectP" href="https://github.com/AnyaKilpatrick" target="_blank">
+                                Github
+                            </a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col s2">
+                <div class="row">
+                    <div class="col s12">
+                        <img id="linkedinImg" class="responsive-img" src="assets/images/linkedin.png" alt="linkedin">
+                    </div>
+                    <div class="col s12">
+                        <p class="center">
+                            <a class="connectP" href="https://www.linkedin.com/in/hanna-kilpatrick-5a6b7914b/" target="_blank">
+                                LinkedIn
+                            </a>
+                        </p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-        <!-- Sidebar -->
-        <!-- <aside class="col l3 l4 m5 s12 xs12"> -->
-            <!-- Creating a container inside of this column so the top row border will be not full width -->
-            <!-- <div>
-                <div class="row text-center">
-                    <h3 class="col m12">Connect With Me</h3>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col s4">
-                    <a href="https://github.com/AnyaKilpatrick" target="_blank">
-                        <img class="icon" src="assets/images/github.png" alt="github">
-                    </a>
-                </div>
-                <div class="col s4 text-center">
-                    <a href="https://www.linkedin.com/in/hanna-kilpatrick-5a6b7914b/" target="_blank">
-                        <img class="icon" src="assets/images/linkedin.png" alt="linkedin">
-                    </a>
-                </div>
-                <div class="col s4 text-center">
-                    <a href="https://www.facebook.com/profile.php?id=100006234904807&ref=bookmarks" target="_blank">
-                        <img class="icon" src="assets/images/facebook.png" alt="facebook">
-                    </a>
-                </div>
-            </div>
-        </aside>
-    </div>
-    </div> -->
+ 
     <!-- Sticky footer -->
-    <div class="col s12 container-fluid text-center pt-3 pb-3 myFooter">
+    <div class="col s12 center myFooter">
         <p>Ⓒ Copyright 2016 Hanna Kilpatrick</p>
     </div>
 
