--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
     </div>
     <div id="aboutContacts" class="section scrollspy">
         <div class="row center">
-            <h3 class="col s12" id="connect">Connect With Me</h3>
+            <h3 class="col s12" id="connect">Connect With Anya</h3>
         </div>
         <div class="row">
             <div class="col offset-s2 s2">
@@ -306,11 +306,13 @@
             </div>
         </div>
     </div>
- 
-    <!-- Sticky footer -->
-    <div class="col s12 center myFooter">
-        <p>Ⓒ Copyright 2016 Hanna Kilpatrick</p>
+    <!-- footer -->
+    <div class="row"  >
+        <div id="footer" class="col s12 center">
+            <p>Ⓒ Copyright 2018 Hanna Kilpatrick</p>
+        </div>
     </div>
+
 
 <script src="assets/js/app.js"></script>
 </body>
