cleaned and organized code

--- a/index.html
+++ b/index.html
@@ -30,20 +30,10 @@
         </div>
     </nav>
     <br><br>
-    <!-- Main Content -->
-    <!-- <div class="parallax-container">
-        <div class="parallax"><img src="assets/images/parallax-back.jpg"></div>
-    </div> -->
+    <!-- About Anya -->
     <div class="addMargin section scrollspy" id="aboutMeDiv">
         <div class="row">
             <article class="col s12">
-                <!-- Creating a container inside of this column so the top row border will be not full width -->
-                <!-- <div>
-                    <div class="row center">
-                        <h3 class="col m12">About Me</h3>
-                    </div>
-                </div> -->
-                <!-- Floating img to the left -->
                 <div class="col s3 center-align">
                     <img class="photo z-depth-5" src="assets/images/anyaphoto1.jpg" alt="Hanna K.">
                 </div>
@@ -63,18 +53,13 @@
             </article>
         </div>
     </div>
-    <!-- <div class="parallax-container">
-        <div class="parallax center" id="parallax2">
-            <h5>
-                Anya is spending almost all her spare time learning new technologies, frameworks and meeting new people from the tech world.
-            </h5>
-        </div>
-    </div> -->
+    <!-- Parallax -->
     <div class="parallax-container z-depth-5">
         <div class="parallax">
             <img src="assets/images/parallax1.jpg">
         </div>
     </div>
+    <!-- About Technical Skills -->
     <div id="aboutSkills">
         <div class="row">
             <div class="col offset-s1 s6">
@@ -108,17 +93,21 @@
             </div>
         </div>
     </div>
+    <!-- Parallax -->
     <div class="parallax-container">
         <div class="parallax">
             <img src="assets/images/parallax1.jpg">
         </div>
     </div>
+    <!-- Portfolio -->
     <div id="aboutExperience" class="section scrollspy">
         <div class="row">
+            <!-- div with img -->
             <div class="col s3" id="expBox">
                 <h3 id="portf">Portfolio</h3>
                 <img id="expGirl" src="assets/images/success3.png">
             </div>
+            <!-- SpeakIT card -->
             <div class="col offset-s1 s3">
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
@@ -148,6 +137,7 @@
                     </div>
                 </div>
             </div>
+            <!-- Bamazon card -->
             <div class="col offset-s1 s3">
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
@@ -179,6 +169,7 @@
                     </div>
                 </div>
             </div>
+            <!-- Disney Trivia card -->
             <div class="col s3">
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
@@ -207,6 +198,7 @@
                     </div>
                 </div>
             </div>
+            <!-- Hangman card -->
             <div class="col offset-s1 s3">
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
@@ -236,17 +228,19 @@
                     </div>
                 </div>
             </div>
+            <!-- div with img -->
             <div class="col offset-s1 s3" id="expBox">
                 <img id="expGirl" src="assets/images/comp.png">
             </div>
         </div>
     </div>
-
+    <!-- Parallax -->
     <div class="parallax-container">
         <div class="parallax">
             <img src="assets/images/parallax1.jpg">
         </div>
     </div>
+    <!-- Connect with Anya -->
     <div id="aboutContacts" class="section scrollspy">
         <div class="row center">
             <h3 class="col s12" id="connect">Connect With Anya</h3>
